--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "vote-backend-vercel",
   "version": "1.0.0",
   "scripts": {
-    "dev": "node server.js"  // Optional for local testing if you want
+    "dev": "node server.js" 
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.11.3"  // For PostgreSQL
+    "pg": "^8.11.3"  
   },
   "engines": {
     "node": ">=14"
