--- a/package.json
+++ b/package.json
@@ -1,14 +1,7 @@
 {
   "name": "vote-backend-vercel",
   "version": "1.0.0",
-  "scripts": {
-    "dev": "node server.js" 
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "pg": "^8.11.3"  
-  },
+  "dependencies": {},
   "engines": {
     "node": ">=14"
   }
