--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
+    },
+    {
+      "src": "/api/vote/(.*)",
+      "dest": "/api/vote/[id].js"
     }
   ]
 }
