--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,14 @@
     {
       "src": "/api/votes",
       "dest": "/api/votes.js"
+    },
+    {
+      "src": "/public/(.*)",
+      "dest": "/public/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
