--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "api/**/*.js": { "runtime": "nodejs" }
+    "api/**/*.js": { "runtime": "nodejs20.x" }
   },
   "headers": [
     {
